<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aeirmist</string>
    <string name="title_activity_main">Aeirmist</string>
    <string name="package_name">com.aeirmist.social</string>
    <string name="custom_url_scheme">com.aeirmist.social</string>
    <string name="shortcut_create_post_short">Create Post</string>
    <string name="shortcut_create_post_long">Create New Post</string>
    <string name="shortcut_messages_short">Messages</string>
    <string name="shortcut_messages_long">Direct Messages</string>
    <string name="shortcut_explore_short">Explore</string>
    <string name="shortcut_explore_long">Explore Aeirmist</string>
</resources>
